--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -12,17 +12,38 @@
     <header>
         <a href="#" class="logo"><img src="assets/logo.png" alt=""></a>
         <ul class="navigation">
-            <li><a href="#"></a>Home</li>
-            <li><a href="#"></a>TV Shows</li>
-            <li><a href="#"></a>Movies</li>
-            <li><a href="#"></a>Latest</li>
-            <li><a href="#"></a>My List</li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">TV Shows</a></li>
+            <li><a href="#">Movies</a></li>
+            <li><a href="#">Latest</a></li>
+            <li><a href="#">My List</a></li>
         </ul>
         <div class="search">
             <input type="text" placeholder="Search">
-            <i class="fas fa-search"></i>
+            <i class="fa fa-search" aria-hidden="true"></i>
         </div>
     </header>
+
+    <div class="banner">
+        <img src="assets/bg.jfif" alt="bg">
+
+        <div class="content">
+            <h4>
+                <span>2017</span>
+                <span><i>+14</i></span>
+                <span>2h 20min</span>
+                <span>sci-fi/action</span>
+            </h4>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum praesentium nostrum odit voluptatibus, molestias dolore sapiente! Ab esse repellat est quidem, quia alias labore aut, nam ut, commodi doloremque autem!
+            </p>
+
+            <div class="buttons">
+                <a href="#"><i class="fa fa-play" aria-hidden="true"></i>Play</a>
+                <a href="#"><i class="fa fa-plus" aria-hidden="true"></i>My List</a>
+            </div>
+        </div>
+    </div>
 </body>
     <script src="src/script.js"></script>
 </html>
