--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -25,7 +25,7 @@
     </header>
 
     <div class="banner">
-        <img src="assets/bg.jfif" alt="bg">
+        <img src="assets/bg.jpg" alt="bg">
 
         <div class="content">
             <h4>
@@ -35,7 +35,7 @@
                 <span>sci-fi/action</span>
             </h4>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum praesentium nostrum odit voluptatibus, molestias dolore sapiente! Ab esse repellat est quidem, quia alias labore aut, nam ut, commodi doloremque autem!
+                César e seu grupo são forçados a entrar em uma guerra contra um exército de soldados liderados por um impiedoso coronel. Depois que vários macacos perdem suas vidas no conflito, César luta contra seus instintos e parte em busca de vingança. Dessa jornada, o futuro do planeta poderá estar em jogo.
             </p>
 
             <div class="buttons">
@@ -43,6 +43,11 @@
                 <a href="#"><i class="fa fa-plus" aria-hidden="true"></i>My List</a>
             </div>
         </div>
+        <a class="play" onclick="toggleVideo()"><img src="assets/play.png">Watch Trailer</a>
+    </div>
+    <div class="trailer">
+        <video src="assets/video.mp4" controls="true"></video>
+        <img src="assets/close.png" class="close" onclick="toggleVideo()">
     </div>
 </body>
     <script src="src/script.js"></script>
